// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-segmented render segmented 1`] = `
<segmented
  class="rc-segmented rc-segmented-dark"
>
  <section
    class="rc-segmented-container"
  >
    <section
      class="rc-segmented-columns"
    >
      <div
        class="rc-segmented-column"
      >
        <h2>
          相关资源
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://pro.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Pro
          </a>
        </div>
        <div
          class="rc-segmented-item my-class-name"
          style="color: blue;"
        >
          <a
            href="https://mobile.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Mobile
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <span
            href="https://kitchen.alipay.com/"
          >
            Kitchen
          </span>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            Sketch 工具集
          </span>
        </div>
      </div>
      <div
        class="rc-segmented-column my-class-name"
        style="color: red;"
      >
        <h2>
          社区
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://pro.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Pro
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://mobile.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Mobile
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://kitchen.alipay.com/"
          >
            Kitchen
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            Sketch 工具集
          </span>
        </div>
      </div>
      <div
        class="rc-segmented-column"
      >
        <h2>
          帮助
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://pro.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Pro
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://mobile.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Mobile
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://kitchen.alipay.com/"
          >
            Kitchen
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            Sketch 工具集
          </span>
        </div>
      </div>
      <div
        class="rc-segmented-column"
      >
        <h2>
          <span
            class="rc-segmented-column-icon"
          >
            <img
              alt="more products"
              src="https://gw.alipayobjects.com/zos/rmsportal/nBVXkrFdWHxbZlmMbsaH.svg"
            />
          </span>
          更多产品
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://yuque.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="rc-segmented-item-icon"
            >
              <img
                alt="yuque"
                src="https://gw.alipayobjects.com/zos/rmsportal/XuVpGqBFxXplzvLjJBZB.svg"
              />
            </span>
            语雀
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            知识创作与分享工具
          </span>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://yunfengdie.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="rc-segmented-item-icon"
            >
              <img
                alt="yuque"
                src="https://gw.alipayobjects.com/zos/rmsportal/uHocHZfNWZOdsRUonZNr.png"
              />
            </span>
            云凤蝶
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            中台建站平台
          </span>
        </div>
      </div>
    </section>
  </section>
  <section
    class="rc-segmented-bottom"
  >
    <div
      class="rc-segmented-bottom-container"
    >
      Made with ❤️ by AFX
    </div>
  </section>
</segmented>
`;

exports[`rc-segmented render segmented with columnLayout and backgroundColor 1`] = `
<segmented
  class="rc-segmented rc-segmented-dark"
  style="color: red; background-color: transparent;"
>
  <section
    class="rc-segmented-container"
  >
    <section
      class="rc-segmented-columns"
      style="justify-content: space-between;"
    >
      <div
        class="rc-segmented-column"
      >
        <h2>
          title
        </h2>
      </div>
      <div
        class="rc-segmented-column"
      >
        <h2>
          title
        </h2>
      </div>
    </section>
  </section>
</segmented>
`;

exports[`rc-segmented render segmented with maxColumnsPerRow 1`] = `
<segmented
  class="rc-segmented rc-segmented-dark"
>
  <section
    class="rc-segmented-container"
  >
    <section
      class="rc-segmented-columns"
      style="flex-wrap: wrap;"
    >
      <div
        class="rc-segmented-column"
        style="flex: 0 0 33.43333333333334%;"
      >
        <h2>
          相关资源
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://pro.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Pro
          </a>
        </div>
        <div
          class="rc-segmented-item my-class-name"
          style="color: blue;"
        >
          <a
            href="https://mobile.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Mobile
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <span
            href="https://kitchen.alipay.com/"
          >
            Kitchen
          </span>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            Sketch 工具集
          </span>
        </div>
      </div>
      <div
        class="rc-segmented-column my-class-name"
        style="color: red; flex: 0 0 33.43333333333334%;"
      >
        <h2>
          社区
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://pro.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Pro
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://mobile.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Mobile
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://kitchen.alipay.com/"
          >
            Kitchen
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            Sketch 工具集
          </span>
        </div>
      </div>
      <div
        class="rc-segmented-column"
        style="flex: 0 0 33.43333333333334%;"
      >
        <h2>
          帮助
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://pro.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Pro
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://mobile.ant.design/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Ant Design Mobile
          </a>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://kitchen.alipay.com/"
          >
            Kitchen
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            Sketch 工具集
          </span>
        </div>
      </div>
      <div
        class="rc-segmented-column"
        style="flex: 0 0 33.43333333333334%;"
      >
        <h2>
          <span
            class="rc-segmented-column-icon"
          >
            <img
              alt="more products"
              src="https://gw.alipayobjects.com/zos/rmsportal/nBVXkrFdWHxbZlmMbsaH.svg"
            />
          </span>
          更多产品
        </h2>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://yuque.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="rc-segmented-item-icon"
            >
              <img
                alt="yuque"
                src="https://gw.alipayobjects.com/zos/rmsportal/XuVpGqBFxXplzvLjJBZB.svg"
              />
            </span>
            语雀
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            知识创作与分享工具
          </span>
        </div>
        <div
          class="rc-segmented-item"
        >
          <a
            href="https://yunfengdie.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="rc-segmented-item-icon"
            >
              <img
                alt="yuque"
                src="https://gw.alipayobjects.com/zos/rmsportal/uHocHZfNWZOdsRUonZNr.png"
              />
            </span>
            云凤蝶
          </a>
          <span
            class="rc-segmented-item-separator"
          >
            -
          </span>
          <span
            class="rc-segmented-item-description"
          >
            中台建站平台
          </span>
        </div>
      </div>
    </section>
  </section>
  <section
    class="rc-segmented-bottom"
  >
    <div
      class="rc-segmented-bottom-container"
    >
      Made with ❤️ by AFX
    </div>
  </section>
</segmented>
`;

exports[`rc-segmented render empty segmented 1`] = `
<segmented
  class="rc-segmented rc-segmented-dark"
>
  <section
    class="rc-segmented-container"
  />
</segmented>
`;

exports[`rc-segmented render light theme segmented 1`] = `
<segmented
  class="rc-segmented rc-segmented-light"
  style="color: red;"
>
  <section
    class="rc-segmented-container"
  >
    <section
      class="rc-segmented-columns"
    >
      <div
        class="rc-segmented-column"
      >
        <h2>
          title
        </h2>
      </div>
      <div
        class="rc-segmented-column"
      >
        <h2>
          title
        </h2>
      </div>
    </section>
  </section>
</segmented>
`;
